--- a/900.css
+++ b/900.css
@@ -2,14 +2,9 @@
 {
 
 	/*====HEADER====*/
-	#header
-	{
-
-	}
-
 	#logo 
 	{
-		
+		margin-right: 12%;
 	}
 	
 		#logo img
